registry/manifests/deployment.yaml
apiVersion: apps/v1
kind: Deployment
metadata:
  name: docker-registry-dep
spec:
  replicas: 1
  selector:
    matchLabels:
      app: registry
  template:
    metadata:
      labels:
        app: registry
    spec:
      containers:
        - name: registry
          image: registry:2.8.1
          volumeMounts:
            - name: repo-vol
              mountPath: /var/lib/registry
            - name: certs-vol
              mountPath: /certs
              readOnly: true
            - name: auth-vol
              mountPath: /auth
              readOnly: true
      volumes:
        - name: repo-vol
          persistentVolumeClaim:
            claimName: docker-repo-pvc
        - name: certs-vol
          secret:
            secretName: cert-secret
        - name: auth-vol
          secret:
            secretName: auth-secret
