registry/manifests/service.yaml
apiVersion: v1
kind: Service
metadata:
  name: docker-registry-svc
spec:
  type: NodePort
  selector:
    app: registry
  ports:
    - port: 5000
      nodePort: 30500
