registry/manifests/ingress.yaml
apiVersion: traefik.containo.us/v1alpha1
kind: IngressRoute
metadata:
  name: docker-registry
  namespace: container-registry
spec:
  entryPoints:
    - websecure
  routes:
    - kind: Rule
      match: Host(\`registry.localdomain.com\`)
      services:
        - kind: Service
          port: 5000
          name: docker-registry
          namespace: container-registry
      middlewares:
        - name: docker-registry-cors
          namespace: container-registry
  tls:
    secretName: localdomain-com-cert-secret
---
apiVersion: traefik.containo.us/v1alpha1
kind: Middleware
metadata:
  name: docker-registry-cors
  namespace: container-registry
spec:
  headers:
    accessControlAllowMethods:
      - GET
      - OPTIONS
      - PUT
      - POST
      - DELETE
    accessControlAllowOriginList:
      - https://registry-ui.localdomain.com
    accessControlAllowCredentials: true
    accessControlMaxAge: 100
    addVaryHeader: true
